# rusticsearch

./: .drone.yml  .travis.yml  Cargo.toml  LICENSE  README.md
abra/: Cargo.toml
abra/benches/: boolean_retrieval.rs  insert_document.rs  query_set_iterator.rs
abra/src/: document.rs  lib.rs  mapping.rs  query_set.rs  request.rs  response.rs  similarity.rs  term.rs
abra/src/analysis/: lucene_asciifold.rs  mod.rs  ngram_generator.rs  registry.rs
abra/src/collectors/: mod.rs  top_score.rs  total_count.rs
abra/src/query/: mod.rs  term_matcher.rs  term_scorer.rs
abra/src/schema/: mod.rs
abra/src/store/: memory.rs  mod.rs
abra_rocksdb/: .gitignore  Cargo.toml
abra_rocksdb/src/: chunk.rs  key_builder.rs  lib.rs  search.rs  term_dictionary.rs
abra_rocksdb/src/search/: boolean_retrieval.rs  doc_id_set.rs  mod.rs  scorer.rs  scoring.rs
kite/: Cargo.toml
kite/benches/: boolean_retrieval.rs  insert_document.rs
kite/src/: doc_id_set.rs  document.rs  lib.rs  query_set.rs  response.rs  similarity.rs  term.rs  token.rs
kite/src/analysis/: mod.rs
kite/src/analysis/filters/: lowercase.rs  mod.rs  ngram.rs
kite/src/analysis/tokenizers/: mod.rs  standard.rs
kite/src/collectors/: total_count.rs
kite/src/query/: mod.rs  term_scorer.rs  term_selector.rs
kite/src/schema/: mod.rs
kite/src/store/: memory.rs  mod.rs
kite_rocksdb/: Cargo.toml
kite_rocksdb/benches/: insert_document.rs  merge_segments.rs
kite_rocksdb/src/: chunk.rs  chunk_merge.rs  doc_id_set.rs  document_index.rs  errors.rs  key_builder.rs  lib.rs  segment.rs  segment_builder.rs  segment_manager.rs  segment_merge.rs  segment_ops.rs  segment_stats.rs  tasks.rs  term_dictionary.rs
kite_rocksdb/src/search/: boolean_retrieval.rs  doc_id_set.rs  mod.rs  scoring.rs  statistics.rs
kite_rocksdb/src/search/plan/: boolean_query_builder.rs  mod.rs
kite_rocksdb/src/search/planner/: boolean_query.rs  mod.rs  score_function.rs
src/: analysis.rs  document.rs  index.rs  main.rs  mapping.rs  query.rs  system.rs  term.rs  token.rs  types.rs  views.rs
src/analysis/: mod.rs  registry.rs
src/analysis/filters/: asciifolding.rs  mod.rs  (+2 more)
src/api/: alias_api.rs  bulk_api.rs  document_api.rs  index_api.rs  macros.rs  mapping_api.rs  mod.rs  search_api.rs  utils.rs
src/index/: maintenance.rs  mod.rs
src/kite/: Cargo.toml
src/kite_rocksdb/: Cargo.toml  build.rs  compact_segment.capnp
src/kite_rocksdb/benches/: insert_document.rs  merge_segments.rs
src/kite_rocksdb/src/: compact_segment.rs  document_index.rs  key_builder.rs  lib.rs  segment.rs  segment_builder.rs  segment_manager.rs  segment_ops.rs  segment_stats.rs
src/kite_rocksdb/src/search/: mod.rs  statistics.rs
src/kite_rocksdb/src/search/planner/: boolean_query.rs  mod.rs  score_function.rs
src/kite_rocksdb/tests/: test_indexing.rs
src/mapping/: build.rs  mod.rs  parse.rs
src/query/: boolean.rs  filter.rs  matching.rs  mod.rs  parse.rs  ranking.rs
src/query_parser/: and_query.rs  constant_score_query.rs  filtered_query.rs  match_all_query.rs  match_none_query.rs  match_query.rs  mod.rs  multi_match_query.rs  not_query.rs  or_query.rs  prefix_query.rs  term_query.rs  terms_query.rs  utils.rs
src/rusticsearch/: document.rs  logger.rs  main.rs  system.rs
src/search/: document.rs  mapping.rs  mod.rs  query_set.rs  request.rs  response.rs  schema.rs  segment.rs  similarity.rs  term.rs  term_vector.rs  token.rs
src/server/: mod.rs
src/system/: index.rs  index_registry.rs  mod.rs
tests/: requirements.txt  tests.py
(+179 files in other folders)
