[package]
name = "rusticsearch"
version = "0.0.1"
authors = ["Karl Hobley <karlhobley10@gmail.com>"]
description = "A lightweight, Elasticsearch-compatible search server (early WIP)"
readme = "README.md"
license = "Apache-2.0"

[workspace]

[[bin]]
name = "rusticsearch"
path = "src/rusticsearch/main.rs"

[dependencies]
iron = "0.4.0"
router = "0.2.0"
persistent = "0.2.0"
url = "1.1.1"
rustc-serialize = "0.3"
log = "0.3.6"
unicode-segmentation = "0.1.2"
maplit = "0.1.3"
chrono = "0.2"
roaring = "0.4.0"
byteorder = "0.5"
slog = "0.6"
slog-term = "0.6"
uuid = { version = "0.3", features = ["v4"] }
serde_json = "0.9"

[dependencies.kite]
path = "src/kite"
version = "0.0.2"

[dependencies.kite_rocksdb]
path = "src/kite_rocksdb"
version = "0.0.1"
