[package]
name = "rusticsearch"
version = "0.0.2"
authors = ["Karl Hobley <karlhobley10@gmail.com>"]
description = "A lightweight, Elasticsearch-compatible search server (early WIP)"
readme = "README.md"
license = "Apache-2.0"

[workspace]

[[bin]]
name = "rusticsearch"
path = "src/rusticsearch/main.rs"

[dependencies]
kite = "0.2.1"
kite_rocksdb = "0.2.1"
iron = "0.4.0"
router = "0.2.0"
persistent = "0.2.0"
url = "1.1.1"
log = "0.3.6"
unicode-segmentation = "0.1.2"
maplit = "0.1.3"
chrono = { version = "0.4", features = ["serde"] }
roaring = "0.4.0"
byteorder = "0.5"
slog = "0.6"
slog-term = "0.6"
uuid = { version = "0.3", features = ["v4"] }
serde = "1.0"
serde_json = "1.0"
atomicwrites = "0.1"
fnv = "1.0"
