[package]
name = "rusticsearch"
version = "0.0.2"
authors = ["Karl Hobley <karlhobley10@gmail.com>"]
description = "A lightweight, Elasticsearch-compatible search server (early WIP)"
readme = "README.md"
license = "Apache-2.0"

[workspace]

[[bin]]
name = "rusticsearch"

[dependencies]
iron = "0.4.0"
router = "0.2.0"
persistent = "0.2.0"
url = "1.1.1"
unicode-segmentation = "0.1.2"
maplit = "0.1.3"
chrono = { version = "0.4", features = ["serde"] }
roaring = "0.5.0"
byteorder = "0.5"
slog = "2.0"
slog-term = "2.3"
slog-async = "2.1"
uuid = { version = "0.3", features = ["v4"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
atomicwrites = "0.1"
fnv = "1.0"
bitflags = "0.7.0"
rocksdb = "0.10"
