[package]
name = "kite"
version = "0.0.1"
authors = ["Karl Hobley <karlhobley10@gmail.com>"]
description = "Information retrieval library"
license = "Apache-2.0"

[dependencies]
rustc-serialize = "0.3"
log = "0.3.6"
unicode-segmentation = "0.1.2"
maplit = "0.1.3"
chrono = "0.2"
roaring = "0.4.0"
byteorder = "0.5"
bitflags = "0.7.0"
