[package]
name = "kite_rocksdb"
version = "0.0.1"
authors = ["Karl Hobley <karlhobley10@gmail.com>"]

[dependencies]
rocksdb = { git = "https://github.com/kaedroho/rust-rocksdb.git", rev = "c0402c4" }
rustc-serialize = "0.3"
maplit = "0.1.3"
byteorder = "0.5"
chrono = "0.2"

[dependencies.kite]
path = "../kite"
version = "0.0.2"
