[package]
name = "kite_rocksdb"
version = "0.0.1"
authors = ["Karl Hobley <karlhobley10@gmail.com>"]
build = "build.rs"

[dependencies]
rocksdb = { git = "https://github.com/kaedroho/rust-rocksdb.git", rev = "c6e75b3" }
rustc-serialize = "0.3"
capnp = "0.7"
maplit = "0.1.3"
byteorder = "0.5"
chrono = "0.2"

[build-dependencies]
capnpc = "0.7"

[dev-dependencies]
rayon = "0.4.3"

[dependencies.kite]
path = "../kite"
version = "0.0.2"
